# courtlistener_citations_mcp

./: .env.example  .env.tester.example  .gitignore  .pre-commit-config.yaml  .prompt_injections.baseline  .secrets.baseline  Dockerfile  INSTALL.md  LICENSE  MCP_GATEWAY.md  PROMPTS.md  README.md  SECURITY_GUIDELINES.md  SECURITY_SCANNING.md  USAGE_EXAMPLES.md  docker-compose.yml  pyproject.toml
.github/workflows/: secret-scan.yaml
.security/: check_prompt_injections.py  courtlistener_prompt_injection_detector.py
deploy/: Validation-Helpers.psm1  cleanup_devtunnels.ps1  linux_setup.sh  manage_api_keys.ps1  start_devtunnel.ps1  validation_helpers.sh  windows_setup.ps1
skill/courtlistener-citation-validator/: SKILL.md
src/courtlistener_mcp/: __init__.py  __main__.py  errors.py  main.py
src/courtlistener_mcp/api/: __init__.py  client.py
src/courtlistener_mcp/config/: api_constants.py  log_config.py  settings.py  tool_guidance.py
src/courtlistener_mcp/prompts/: __init__.py  validate_legal_brief.py
src/courtlistener_mcp/shared/: dpapi_crypto.py  http_rate_limit.py  log_sanitizer.py  safe_logger.py  secure_storage.py
src/courtlistener_mcp/ui/: __init__.py  citation_view.py
tests/: README.md  conftest.py
tests/integration/: test_audit_findings.py  test_mcp_tools.py
tests/unit/: test_client.py  test_extract_citations.py  test_log_sanitizer.py  test_secure_storage.py
ui-host/: Dockerfile  package-lock.json  package.json
